<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Track Navigator</string>
    <string name="module_record">Запись</string>
    <string name="module_race">Заезд</string>
    <string name="exit_app">Выход</string>
    <string name="start_gps">Запуск GPS</string>
    <string name="add_control_point">Точка</string>
    <string name="btn_record_save">Запись</string>
    <string name="finish_track">Запись</string>
    <string name="cancel_record">Отмена</string>
    <string name="accuracy_label">Точность: %1$s</string>
    <string name="accuracy_high">Высокая точность</string>
    <string name="accuracy_good">Хорошая точность</string>
    <string name="accuracy_medium">Средняя точность</string>
    <string name="accuracy_poor">Плохая точность</string>
    <string name="coords_label">Широта: %1$.7f  Долгота: %2$.7f</string>
    <string name="points_count">Точек: %1$d</string>
    <string name="distance_label">Дистанция: %1$.2f км</string>
    <string name="gps_waiting">Поиск спутников…</string>
    <string name="record_status_idle">Инициализация…</string>
    <string name="gps_ready_record">Подключено</string>
    <string name="race_status_idle">Ожидание…</string>
    <string name="enable_gps_toast">Пожалуйста, включите GPS в настройках системы.</string>
    <string name="accuracy_low_race">Низкая точность</string>
    <string name="accuracy_too_poor">Слишком низкая точность</string>
    <string name="need_two_points">Нужно минимум 2 точки</string>
    <string name="gpx_saved">Сохранено!</string>
    <string name="save_name_title">Сохранить трек</string>
    <string name="save_name_message">Введите название:</string>
    <string name="save_action">Сохранить</string>
    <string name="save_failed">Ошибка сохранения</string>
    <string name="save_failed_with_reason">Ошибка: %1$s</string>
    <string name="pick_gpx">Выбрать файл</string>
    <string name="gpx_file_unreadable">Файл не читается.</string>
    <string name="gpx_invalid_file">Некорректный трек.</string>
    <string name="gpx_loaded_points">Загружено точек: %1$d</string>
    <string name="gpx_parse_error">Ошибка: %1$s</string>
    <string name="start_race">Старт</string>
    <string name="stop_race">Стоп</string>
    <string name="checkpoint_progress">Точка %1$d / %2$d</string>
    <string name="deviation_left">ЛЕВЕЕ</string>
    <string name="deviation_right">ПРАВЕЕ</string>
    <string name="on_track">На курсе</string>
    <string name="race_finished">ФИНИШ!</string>
    <string name="permission_rationale">Требуется доступ к местоположению.</string>
    <string name="race_notif_channel_name">Активный заезд</string>
    <string name="race_notif_title">Заезд</string>
    <string name="wait_at_start">Подойдите к старту</string>
    <string name="dist_to_start">До старта: %1$.1f м</string>
    <string name="checkpoint_passed">Пройдено!</string>
    <string name="race_progress_title">Прогресс</string>
    <string name="race_marker_start">Старт</string>
    <string name="race_marker_middle">Середина</string>
    <string name="race_marker_finish">Финиш</string>
    <string name="race_stage_start">Начало</string>
    <string name="race_stage_middle">Середина</string>
    <string name="race_stage_finish">Финиш</string>
    <string name="race_progress_desc">Точка %1$d из %2$d</string>
    <string name="cannot_record_during_race">Запись недоступна во время заезда.</string>

    <string name="btn_desc_record">Записать трек</string>
    <string name="btn_desc_race">Заезд по треку</string>
    <string name="btn_desc_exit">Выйти из приложения</string>
    <string name="btn_desc_start_gps">Запустить GPS</string>
    <string name="btn_desc_add_point">Добавить контрольную точку</string>
    <string name="btn_desc_finish">Сохранить трек</string>
    <string name="btn_desc_back_record">Назад</string>
    <string name="btn_desc_pick_gpx">Выбрать GPX</string>
    <string name="btn_desc_start_race">Начать заезд</string>
    <string name="btn_desc_stop_race">Остановить заезд</string>
    <string name="btn_desc_back_race">Назад</string>
    <string name="race_notif_channel_desc">Отслеживание местоположения для заезда</string>
</resources>
